--- a/demo/login.html
+++ b/demo/login.html
@@ -7,8 +7,13 @@
     <title>Document</title>
     <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/login.css">
+    <script src="./js/jq.js"></script>
+    <script src="./js/login.js"></script>
 </head>
 <body>
+  <div class="alertBox">
+    <div class="alert alert-danger" role="alert"></div>
+  </div>
     <div class="login">
         <div class="form">
                 <div class="form-group">
@@ -49,7 +54,7 @@
                         </label>
                     </div>
                 </div>
-                <button class="btn btn-primary">登录</button>
+                <button class="btn btn-primary" id="login">登录</button>
         </div>
     </div>
 </body>
