--- a/demo/shijuan.html
+++ b/demo/shijuan.html
@@ -7,6 +7,49 @@
     <title>班级作业</title>
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/shijuan.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="./js/jq.js"></script>
+    <script type="text/javascript" src="js/quiz.js"></script>
+    <script type="text/javascript">
+        $(function(){
+        $('.btn').on('click',function(){
+            window.location.href="./shijuan.html";
+        })
+        $.ajax({
+            url:'../user.php',
+            type:"POST",
+            data:{
+                type:"test"
+            },
+            success(res){
+                let list = JSON.parse(res).data;
+                console.log(list);
+                let questions = [];
+                list.forEach(item => {
+                    console.log(item.opationC)
+                    if(item.opationC == ''){
+                        questions.push({
+                        'question':item.title,
+                        'answers':[item.opationA,item.opationB],
+                        'correctAnswer':item.answer
+                        })
+                    }else{
+                        questions.push({
+                        'question':item.title,
+                        'answers':[item.opationA,item.opationB,item.opationC,item.opationD],
+                        'correctAnswer':item.answer
+                        })
+                    } 
+                });
+                console.log(questions);
+                var init={'questions':questions};
+                    $('#quiz-container').jquizzy({
+                        questions: init.questions
+                    });
+            }
+    })
+})    
+    </script>
 </head>
 <body>
    <div>
@@ -51,7 +94,10 @@
        </div>
        <!-- 模拟试卷 -->
        <div class="shijuan">
-            
+           <button class="btn">重新加载</button>
+            <div class="demo">
+                <div id='quiz-container'></div>
+            </div>
        </div>
         <div class="friendlink">
             <div class="friend"><span>友情链接</span></div>
