--- a/demo/adminWork.html
+++ b/demo/adminWork.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/adminHome.css">
     <link rel="stylesheet" href="./css/adminWork.css">
+    <script src="./js/jq.js"></script>
 </head>
 <body>
     <div class="box">
@@ -33,9 +34,120 @@
                 </ul>
             </div>
             <div class="content">
-                <h1>欢迎来动教师端系统</h1>
+               <div>
+                   <h3>选择题添加</h3>
+                   <div class="form">
+                       <div class="form-group">
+                           <label>题目：<input type="text" class="form-control" placeholder="请输入题目"></label>
+                       </div>
+                       <div class="form-group">
+                           <label>A选项：<input type="text" class="form-control"  placeholder="请输入A选项"></label>
+                       </div>
+                       <div class="form-group">
+                           <label>B选项：<input type="text" class="form-control"  placeholder="请输入B选项"></label>
+                       </div>
+                       <div class="form-group">
+                           <label>C选项：<input type="text" class="form-control"  placeholder="请输入C选项"></label>
+                       </div>
+                       <div class="form-group">
+                           <label>D选项：<input type="text" class="form-control"  placeholder="请输入D选项"></label>
+                       </div>
+                       <div class="form-group">
+                           <label>第几个是正确答案<input type="number" min="1" max="4" class="form-control"  placeholder="正确答案"></label>
+                       </div>
+                       <div class="from-group">
+                           <button id="select" class="btn btn-success">添加</button>
+                       </div>
+                   </div>
+               </div>
+                <div >
+                    <h3>判断题添加</h3>
+                    <div class="form check">
+                        <div class="form-group">
+                            <label>题目：<input type="text" class="form-control" placeholder="请输入题目"></label>
+                        </div>
+                        <div class="form-group">
+                            <label>正确：<input type="text" class="form-control"  value="正确" disabled></label>
+                        </div>
+                        <div class="form-group">
+                            <label>错误：<input type="text" class="form-control"  value="错误" disabled></label>
+                        </div>
+                        <div class="form-group">
+                            <label>第几个是正确答案<input type="number" min="1" max="2" class="form-control"  placeholder="正确答案"></label>
+                        </div>
+                        <div class="from-group">
+                            <button id="test" class="btn btn-success">添加</button>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
+    <script>
+        $('#select').on('click',function(){
+            let flag = false,
+                titleArr=['title','opationA','opationB','opationC','opationD','answer'];
+                obj = {};
+            for(let i = 0;i<6;i++){
+                if($.trim($('.form input').eq(i).val())== ""){
+                    alert("请填写完整信息");
+                    flag = true;
+                    break;
+                }else{
+                    obj[titleArr[i]] = $('.form input').eq(i).val()
+                }
+            }
+            $.ajax({
+                url:"../user.php",
+                type:"POST",
+                data:{
+                    type:'addHomeWork',
+                    title:obj['title'],
+                    opationA:obj['opationA'],
+                    opationB:obj['opationB'],
+                    opationC:obj['opationC'],
+                    opationD:obj['opationD'],
+                    answer:obj['answer']
+                },
+                success(res){
+                    if(flag == false){
+                        alert('添加成功');
+                        window.location.href="./adminWork.html";
+                    }
+                }
+            })
+        })
+        $('#test').on('click',function(){
+            let flag = false,
+            titleArr=['title','opationA','opationB','answer'],
+                obj={};
+            for(let i = 0;i<4;i++){
+                if($.trim($('.check input').eq(i).val())== ""){
+                    alert("请填写完整信息");
+                    flag = true;
+                    break;
+                }else{
+                    obj[titleArr[i]] = $('.check input').eq(i).val()
+                }
+            }
+            $.ajax({
+                url:"../user.php",
+                type:"POST",
+                data:{
+                    type:'addHomeWork',
+                    title:obj['title'],
+                    opationA:obj['opationA'],
+                    opationB:obj['opationB'],
+                    answer:obj['answer']
+                },
+                success(res){
+                    if(flag == false){
+                        alert('添加成功');
+                        window.location.href="./adminWork.html";
+                    }
+                }
+            })
+        })
+    </script>
 </body>
 </html>
