--- a/demo/adminHome.html
+++ b/demo/adminHome.html
@@ -28,11 +28,12 @@
             <div class="navleft">
                 <ul class="nav nav-pills nav-stacked">
                     <li role="presentation"><a href="./adminStudent.html">学生管理</a></li>
-                    <li role="presentation"><a href="javascript:;">作业下发</a></li>
+                    <li role="presentation"><a href="./adminWork.html">作业下发</a></li>
+                    <li role="presentation"><a href="./adminMessage.html">下发通知</a></li>
                 </ul>
             </div>
             <div class="right">
-                <h1>欢迎来动教师端系统</h1>
+                <h1>欢迎来到教师端系统</h1>
             </div>
         </div>
     </div>
