--- a/demo/adminWork.html
+++ b/demo/adminWork.html
@@ -30,7 +30,8 @@
             <div class="navleft">
                 <ul class="nav nav-pills nav-stacked">
                     <li role="presentation"><a href="./adminStudent.html">学生管理</a></li>
-                    <li role="presentation" class="active"><a href="javascript:;">作业下发</a></li>
+                    <li role="presentation" class="active"><a href="./adminWork.html">作业下发</a></li>
+                    <li role="presentation"><a href="./adminMessage.html">下发通知</a></li>
                 </ul>
             </div>
             <div class="content">
