--- a/demo/index.html
+++ b/demo/index.html
@@ -17,7 +17,6 @@
            <!-- 右 -->
            <div class="he_ri">
                <span><a href="./personal.html">个人中心</a></span>
-               <span><a href="./help.html">帮助反馈</a></span>
                <span><a href="./about.html">关于我们</a></span>
            </div>
            </div>
@@ -26,7 +25,7 @@
        <div class="nav">
            <div class="nav_co">
                 <div class="logo">
-                    <img src="./img/logo.jpg" alt="">
+                    <img src="./images/logo.jpg" alt="">
                 </div>
                 <div class="search-input">
                     <input type="search" placeholder="搜索资料">
@@ -39,19 +38,16 @@
                     <!-- 功能栏 -->  
                          <div class="gongnengri">
                             <span><a href="./lianxi.html">基础练习</a></span>
-                            <span><a href="./cuoti.html">错题重做</a></span>
-                            <span><a href="./zhishi.html">知识收藏</a></span>
                             <span><a href="./zuoye.html">班级作业</a></span>
                             <span><a href="./shijuan.html">模拟试卷</a></span>
                             <span><a href="./tongzhi.html">班级通知</a></span>
-                            <span><a href="./tiwen.html">在线提问</a></span>
                         </div>
                 </div>
            </div>
        </div>
-       <!-- 轮播图 -->
+       <!-- 图片 -->
        <div class="lunbotu">
-            <img src="./img/lunbotu2.jpg" alt="">
+            <img src="./images/lunbotu2.jpg" alt="">
        </div>
        <!-- 课程试卷 -->
        <div class="kechengshijuan">
@@ -63,8 +59,8 @@
                    <div class="nj"><span>一年级</span></div>
                    <div class="sj-1">
                        <ul>
-                           <li><a href="">2017-2018学年人教版上册期中试卷</a></li>
-                           <li><a href="">2017-2018学年人教版上册期末试卷</a></li>
+                           <li><a target="_blank" href="http://www.xuekeedu.com/softlist/sx-g1-type3/">2017-2018学年人教版上册期中试卷</a></li>
+                           <li><a target="_blank" href="http://www.xuekeedu.com/softlist/sx-g2-type3-subtype9/">2017-2018学年人教版上册期末试卷</a></li>
                            <li><a href="">2017-2018学年人教版下册期中试卷</a></li>
                            <li><a href="">2017-2017学年人教版下册期末试卷</a></li>
                            <li><a href="">2015-2016学年人教版下册期中试卷</a></li>
