--- a/demo/shijuan.html
+++ b/demo/shijuan.html
@@ -60,7 +60,6 @@
            <!-- 右 -->
            <div class="he_ri">
                <span><a href="./personal.html">个人中心</a></span>
-               <span><a href="./help.html">帮助反馈</a></span>
                <span><a href="./about.html">关于我们</a></span>
            </div>
            </div>
@@ -69,7 +68,7 @@
        <div class="nav">
            <div class="nav_co">
                 <div class="logo">
-                    <img src="./img/logo.jpg" alt="">
+                    <img src="./images/logo.jpg" alt="">
                 </div>
                 <div class="search-input">
                     <input type="search" placeholder="搜索资料">
@@ -82,19 +81,16 @@
                     <!-- 功能栏 -->  
                          <div class="gongnengri">
                             <span class="jichulianxi"><a href="./lianxi.html">基础练习</a></span>
-                            <span class="cuotichongzuo"><a href="./cuoti.html">错题重做</a></span>
-                            <span class="zhishishoucang"><a href="./zhishi.html">知识收藏</a></span>
                             <span class="banjizuoye"><a href="./zuoye.html">班级作业</a></span>
                             <span class="monishijuan"><a href="./shijuan.html">模拟试卷</a></span>
                             <span><a href="./tongzhi.html">班级通知</a></span>
-                            <span><a href="./tiwen.html">在线提问</a></span>
                         </div>
                 </div>
            </div>
        </div>
        <!-- 模拟试卷 -->
        <div class="shijuan">
-           <button class="btn">重新加载</button>
+           <button class="btn">重新做题</button>
             <div class="demo">
                 <div id='quiz-container'></div>
             </div>
