--- a/demo/tongzhi.html
+++ b/demo/tongzhi.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>班级作业</title>
+    <link href="https://cdn.bootcss.com/twitter-bootstrap/3.4.1/css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/tongzhi.css">
+    <script src="./js/jq.js"></script>
 </head>
 <body>
    <div>
@@ -17,7 +19,6 @@
            <!-- 右 -->
            <div class="he_ri">
                <span><a href="./personal.html">个人中心</a></span>
-               <span><a href="./help.html">帮助反馈</a></span>
                <span><a href="./about.html">关于我们</a></span>
            </div>
            </div>
@@ -26,7 +27,7 @@
        <div class="nav">
            <div class="nav_co">
                 <div class="logo">
-                    <img src="./img/logo.jpg" alt="">
+                    <img src="./images/logo.jpg" alt="">
                 </div>
                 <div class="search-input">
                     <input type="search" placeholder="搜索资料">
@@ -39,12 +40,9 @@
                     <!-- 功能栏 -->  
                          <div class="gongnengri">
                             <span class="jichulianxi"><a href="./lianxi.html">基础练习</a></span>
-                            <span class="cuotichongzuo"><a href="./cuoti.html">错题重做</a></span>
-                            <span class="zhishishoucang"><a href="./zhishi.html">知识收藏</a></span>
                             <span class="banjizuoye"><a href="./zuoye.html">班级作业</a></span>
                             <span class="monishijuan"><a href="./shijuan.html">模拟试卷</a></span>
                             <span class="banjitongzhi"><a href="./tongzhi.html">班级通知</a></span>
-                            <span><a href="./tiwen.html">在线提问</a></span>
                         </div>
                 </div>
            </div>
@@ -70,5 +68,34 @@
             </p>
          </div> 
    </div>
+    <script>
+        $(function(){
+            let str ='';
+            $.ajax({
+                url:"../user.php",
+                type:"POST",
+                data:{
+                    type:"getMsg"
+                },
+                success(res){
+                    let json = JSON.parse(res);
+                   json.data.forEach(item => {
+                       str +=`<div class="panel panel-default">
+                                <div class="panel-heading">
+                                    <h3 class="panel-title">${item.mesTitle}</h3>
+                                </div>
+                                <div class="panel-body">
+                                    ${item.mesContent}
+                                </div>
+                                <div class="panel-footer">
+                                    ${item.mesTime}
+                                </div>
+                            </div>`
+                   });
+                   $('.tongzhi').html(str);
+                }
+            })
+        })
+    </script>
 </body>
 </html>
